Update changes to mention previous API.get() change

--- a/ovsdbapp/CHANGES
+++ b/ovsdbapp/CHANGES
@@ -1,5 +1,6 @@
 Changes for Neutron migration
 
+* Neutron needs to keep its interface mapp and specify its own API.get()
 * The context passed to an API should have an ovsdb_connection attribute
 * The helpers.enable_connection_uri function now takes a timeout and an
   execute function as arguments, any kwargs will be passed to that function
